IGNITE-14566: fix comments